# django_homework_29

./: manage.py  pyproject.toml  pytest.ini
ads/: models.py  permissions.py  serializers.py  validators.py
ads/migrations/: 0001_initial.py  0002_selection.py  0003_category_slug_alter_ad_name_alter_ad_price.py  0004_alter_category_slug.py  0005_alter_ad_description.py
ads/urls/: ad.py  cat.py  selection.py
ads/views/: ad.py  cat.py  selection.py  vvv
datasets/: converter_db.py
django_homework_29/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  factories.py  fixtures.py
tests/ad/: ad_create_test.py  ad_list_test.py  ad_retrieve_test.py
tests/selection/: selection_create_test.py
users/: models.py  serializers.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers_user_date_joined_user_email_and_more.py  0003_alter_user_age.py  0004_alter_user_role.py  0005_user_birth_date_alter_user_email.py  0006_alter_user_birth_date.py
users/urls/: location.py  user.py
